[project]
name = "backstage-dcr-poc"
version = "0.1.0"
description = "A backstage poc for dynamic client registration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
]

[dependency-groups]
dev = ["ruff>=0.11.2"]

[tool.ruff]
line-length = 89

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
